Fix spacing issue with url address on  card to wrap text

--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,7 @@ body {
         width: auto;
     }
 
+
  .arrow-BTN {
   display:block;
   height: 30px;
@@ -134,4 +135,8 @@ body {
   border-radius: 50%;
   background-color: white;
   border: 1px solid red;
+ }
+
+ .web-address {
+   word-break: break-word;
  }
